# forged-in-the-ai

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  NOTICE.md  README.md  SPECIFICATION.md  TODO.md  compose.yml
packs/: README.md  example_base.json  srd_base.json
scripts/: extract_srd.py  licensing-grep.sh
server/: README.md  alembic.ini  pyproject.toml
server/ai/: __init__.py  agent.py  canon.py  capability.py  context.py  llm_client.py  player_agent.py  procedures.py  recap.py  replay.py  structured.py  system_prompt.py  tools.py  transcript.py
server/alembic/: env.py
server/alembic/versions/: 277e5c7a2338_add_campaigns.py  875bd2cd871d_extend_srd_chunks_fts_index_with_a_.py  b23423fbc34e_baseline.py  e38e1b2df840_add_capability_probes.py  f4c386532138_add_srd_chunks_fts_index.py
server/alembic_campaign/: env.py
server/alembic_campaign/versions/: 878503b55627_baseline.py
server/app/: campaigns.py  export_openapi.py  ingestion.py  llm.py  main.py  notice.py  packs.py  session_ws.py  settings.py
server/cli/: __init__.py  example_pack.py  extract_srd.py  fetch_srd.py  guided_entry.py  index_srd.py  licensing_grep.py  paths.py  session.py
server/engine/: __init__.py  advancement.py  campaign.py  character.py  clocks.py  consequences.py  controller.py  crew.py  crew_mechanics.py  dice.py  downtime.py  entities.py  errors.py  events.py  operations.py  pack_loader.py  packs.py  relationships.py  replay.py  rolls.py  score.py  session.py
server/ingestion/: module_extraction.py  module_review.py  text_extraction.py
server/state/: __init__.py  campaign_store.py  db.py  migrations.py  models.py  module_store.py  srd_bootstrap.py  srd_index.py
server/tests/: test_advancement.py  test_agent.py  test_ai_replay.py  test_campaign.py  test_campaign_store.py  test_campaigns_api.py  test_canon.py  test_capability.py  test_character.py  test_cli.py  test_clocks.py  test_consequences.py  test_context.py  test_controller.py  test_crew.py  test_crew_mechanics.py  test_dice.py  test_downtime.py  test_entities.py  test_events.py  test_example_pack.py  test_faction_clocks.py  test_guided_entry.py  test_headless_session.py  test_ingestion_api.py  test_lifespan.py  test_llm_client.py  test_module_extraction.py  test_module_review.py  test_module_store.py  test_notice_api.py  test_operations.py  test_pack_loader.py  test_packs.py  test_player_agent.py  test_procedures.py  test_recap.py  test_relationships.py  test_replay.py  test_rolls.py  (+12 more)
(+76 files in other folders)
