[project]
name = "server"
version = "0.1.0"
description = "FastAPI server, rules engine, and AI GM loop for forged-in-the-ai"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.5",
    "click>=8.4.2",
    "fastapi>=0.139.0",
    "httpx2>=2.5.0",
    "pydantic-settings>=2.14.2",
    "pypdf>=6.14.2",
    "python-multipart>=0.0.32",
    "sqlalchemy[asyncio]>=2.0.51",
    "uvicorn[standard]>=0.51.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.21",
]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["alembic/versions", "alembic_campaign/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection idiom (`param: T = Depends(...)`) is a
# function call in an argument default by design, not the mutable-default
# bug B008 otherwise catches.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Path", "fastapi.Body"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
